# mosaicnotes-webapi

./: .gitignore  README.md  alembic.ini  docker-compose.yml  example.env  pyproject.toml
alembic/: env.py
alembic/sql/: 8125ce6a58d2.sql
alembic/versions/: 2025_05_01_0232-8125ce6a58d2.py  2025_05_04_1424-ea4e6b5c5a04.py
app/: __init__.py  config.py  container.py  main.py
app/exceptions/: __init__.py  api_base.py  validation_errors.py
app/handlers/: __init__.py  demo.py  user.py
app/libs/consts/: enums.py
app/libs/contexts/: api_context.py
app/libs/database/: __init__.py  aio_orm.py  aio_pg.py  aio_redis.py  orm.py
app/libs/depends/: rate_limiters.py
app/libs/http_client/: http_client.py
app/libs/logger/: logger.py
app/libs/shared/: asserts.py  converter.py
app/libs/utils/: lifespan.py
app/models/: __init__.py  demo.py  user.py
app/models/mixins/: audit_mixin.py  context.py
app/route_classes/: __init__.py  log_route.py
app/routers/: __init__.py  api_root.py
app/routers/apis/v1/: __init__.py  demo.py  user.py
app/schemas/: mixins.py
app/serializers/mixins/: __init__.py  base.py
app/serializers/v1/: demo.py  user.py
tests/: conftest.py  container.py
tests/fixtures/: __init__.py  container.py
tests/fixtures/handlers/: __init__.py
tests/libs/database/: test_aio_db.py  test_aio_orm.py
